Fixes menu button click on mobile devices.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,7 +23,7 @@ nav .site-title {
     position: absolute;
     left: 50px;
     top: 30px;
-    z-index: 1000;
+    z-index: 998;
 }
 
 nav .button {
